[gd_scene load_steps=11 format=3 uid="uid://jj553xytl1y7"]

[ext_resource type="Theme" uid="uid://i3eq7e3dpcry" path="res://src/ui/themes/quick_slotbar.tres" id="1_mksag"]
[ext_resource type="Script" uid="uid://c5wg6tpiop0n0" path="res://src/actors/player/ui/player_quick_slot_ui/quick_slot.gd" id="2_mksag"]
[ext_resource type="Texture2D" uid="uid://dajjgcqhf3bdg" path="res://src/ui/themes/items_themes/bg_gradient_item_rare.tres" id="3_3m6fb"]
[ext_resource type="Theme" uid="uid://k0ll6m3w6kk3" path="res://src/ui/themes/items_themes/unique_border.tres" id="4_d0nw3"]
[ext_resource type="Texture2D" uid="uid://lafvhwrctoan" path="res://assets/ui/AllButtons.png" id="5_0yxee"]
[ext_resource type="Texture2D" uid="uid://bnn1njfid238j" path="res://assets/sprites/items/potions/mana_potion_02.png" id="6_14yk8"]
[ext_resource type="PackedScene" uid="uid://dh3yligryu8qj" path="res://src/ui/default_label.tscn" id="7_hnhs6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vtsil"]
atlas = ExtResource("5_0yxee")
region = Rect2(32, 128, 16, 16)

[sub_resource type="Gradient" id="Gradient_tu1bu"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 0.983)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_vtsil"]
gradient = SubResource("Gradient_tu1bu")
fill_from = Vector2(0, 1)

[node name="QuickSlot" type="Panel" groups=["quick_slot"]]
clip_children = 2
custom_minimum_size = Vector2(80, 80)
anchors_preset = -1
anchor_right = 0.075
anchor_bottom = 0.133
offset_right = -32.0
offset_bottom = -31.76
theme = ExtResource("1_mksag")
script = ExtResource("2_mksag")
metadata/_edit_lock_ = true

[node name="RarityTexture" type="TextureRect" parent="."]
custom_minimum_size = Vector2(70, 70)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -34.0
offset_top = -34.0
offset_right = 34.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_3m6fb")
metadata/_edit_lock_ = true

[node name="UniqueBorder" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_d0nw3")
metadata/_edit_lock_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8
metadata/_edit_lock_ = true

[node name="ButtonUI" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
texture = SubResource("AtlasTexture_vtsil")

[node name="ItemTexture" type="TextureRect" parent="MarginContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = ExtResource("6_14yk8")

[node name="Stacks" parent="MarginContainer" instance=ExtResource("7_hnhs6")]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="TimerProgressBar" type="TextureProgressBar" parent="."]
layout_mode = 2
offset_left = 4.0
offset_top = 4.0
offset_right = 76.0
offset_bottom = 76.0
fill_mode = 5
nine_patch_stretch = true
texture_progress = SubResource("GradientTexture2D_vtsil")
metadata/_edit_lock_ = true

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true
